# result-inspect

./: .travis.yml  Cargo.toml  README.md  bors.toml
.builds/: msrv.yml  stable.yml
.github/workflows/: ci.yml  flake-update.yml
src/: lib.rs
