[package]
name     = "result-inspect"
version  = "0.1.0"
authors  = ["Matthias Beyer <mail@beyermatthias.de>"]
edition  = "2018"

readme   = "README.md"
license  = "MPL-2.0"

keywords    = ["result", "util"]
description = "Adds the missing Result::inspect() function"

documentation = "https://docs.rs/result-inspect"
repository    = "https://github.com/matthiasbeyer/result-inspect"

[dependencies]
